--- a/ProjectSpartan/ProjectSpartan/ProjectSpartan/Views/MainPage.xaml
+++ b/ProjectSpartan/ProjectSpartan/ProjectSpartan/Views/MainPage.xaml
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:ProjectSpartan.UI"
-             x:Class="ProjectSpartan.UI.MainPage">
-
+<local:BaseView xmlns="http://xamarin.com/schemas/2014/forms"
+                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:local="clr-namespace:ProjectSpartan.UI.Views"
+                x:Class="ProjectSpartan.UI.Views.MainPage">
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <Label Text="Welcome to Xamarin.Forms!"
+               HorizontalOptions="Center"
+               VerticalOptions="CenterAndExpand" />
     </StackLayout>
-
-</ContentPage>
+</local:BaseView>
