enterprise navigation framed

--- a/ProjectSpartan/ProjectSpartan/ProjectSpartan/Views/MainPageView.xaml
+++ b/ProjectSpartan/ProjectSpartan/ProjectSpartan/Views/MainPageView.xaml
@@ -2,11 +2,13 @@
 <local:BaseView xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:local="clr-namespace:ProjectSpartan.UI.Views"
-                x:Class="ProjectSpartan.UI.Views.MainPage">
+                x:Class="ProjectSpartan.UI.Views.MainPageView">
     <StackLayout>
         <!-- Place new controls here -->
         <Label Text="Welcome to Xamarin.Forms!"
                HorizontalOptions="Center"
                VerticalOptions="CenterAndExpand" />
+        <Button Text="Test Navigation"
+                Command="{Binding NavigateTappedCommand}" />
     </StackLayout>
 </local:BaseView>
